<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:id="@+id/lnl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:background="@color/white"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_app_logo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher_round" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="170dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv_login_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="20dp"
                android:text="@string/tv_password_reset"
                android:textAllCaps="true"
                android:textSize="18sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:theme="@style/TextInputLayoutAppearance">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/tv_your_email"
                    android:inputType="textWebEmailAddress"
                    android:padding="15dp"
                    android:textColor="@color/white" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/btn_signUp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tv_resetPassword"
                    android:textAllCaps="false"
                    android:textColor="@color/dull_blue"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_enter_email_add"
                    android:textAllCaps="false"
                    android:textColor="@color/dull_blue"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_round_filled_white"
                android:padding="15dp"
                android:text="@string/tv_sign_in"
                android:textAllCaps="false"
                android:textColor="@color/light_blue"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/lnl_logIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tv_back_acc"
                    android:textAllCaps="false"
                    android:textColor="@color/dull_blue" />

                <TextView
                    android:id="@+id/tv_logIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/tv_log_in"
                    android:textAllCaps="false"
                    android:textColor="@color/dull_blue"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>