<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activity.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/tv_login"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/TextInputLayoutAppearance">

                    <EditText
                        android:id="@+id/etFName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/tv_first_name"
                        android:inputType="textPersonName"
                        android:padding="15dp"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:textColor="@color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/TextInputLayoutAppearance">

                    <EditText
                        android:id="@+id/etLName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/tv_last_name"
                        android:inputType="textPersonName"
                        android:padding="15dp"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:textColor="@color/white" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutAppearance">

                <EditText
                    android:id="@+id/etDob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:drawableRight="@drawable/calendar"
                    android:drawableTint="#1468B1"
                    android:editable="false"
                    android:gravity="center"
                    android:hint="@string/tv_select_dob"
                    android:inputType="text"
                    android:longClickable="false"
                    android:padding="15dp"
                    android:textColor="@color/white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutAppearance">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_true_blue"
                    android:gravity="center"
                    android:hint="@string/tv_email_address"
                    android:inputType="textWebEmailAddress"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/TextInputLayoutAppearance"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/et_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/tv_password"
                        android:inputType="textWebPassword"
                        android:padding="15dp"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:textColor="@color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/TextInputLayoutAppearance"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/et_confirm_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tv_confirm_password"
                        android:inputType="textWebPassword"
                        android:padding="15dp"
                        android:textColor="@color/white" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutAppearance">

                <EditText
                    android:id="@+id/etMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_true_blue"
                    android:gravity="center"
                    android:hint="@string/tv_mobile_number"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutAppearance">

                <EditText
                    android:id="@+id/etOrgName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/tv_organization_name"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="Select Gender"
                android:textColor="@color/dull_blue"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/sg_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:gravity="center"
                android:orientation="horizontal"
                android:theme="@style/TextInputLayoutAppearance">

                <RadioButton
                    android:id="@+id/btn_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="10dp"
                    android:checked="true"
                    android:text="@string/tv_male"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/btn_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="10dp"
                    android:checked="false"
                    android:text="@string/tv_female"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_round_filled_white"
            android:text="@string/tv_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/light_blue"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/lnl_logIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_already_acc"
                android:textAllCaps="false"
                android:textColor="@color/dull_blue" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:text="@string/tv_login"
                android:textAllCaps="false"
                android:textColor="@color/dull_blue"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>