<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    tools:context=".activity.ForgotPasswordActivity">

    <LinearLayout
        android:id="@+id/lnl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7"
            android:background="@color/white"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_app_logo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/tv_login_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/tv_otp_verification"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/tv_digit"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <com.mukesh.OtpView
                android:id="@+id/et_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:textColor="@color/black"
                app:itemCount="6"
                app:lineColor="@color/black"
                app:viewType="line" />

            <Button
                android:id="@+id/btn_confirmOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/lnl_text"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="90dp"
                android:background="@drawable/btn_round_filled"
                android:padding="15dp"
                android:text="@string/confirm_otp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>