<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    tools:context=".activity.EditProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:background="@color/light_blue">

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_photo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:src="@mipmap/ic_launcher_round"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="1dp" />

                    <ImageView
                        android:id="@+id/iv_upload_photo"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="10dp"
                        android:background="@drawable/round_bg"
                        android:padding="5dp"
                        android:src="@drawable/ic_add_a_photo" />
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/etFName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tv_first_name"
                        android:inputType="textPersonName"
                        android:textColor="@color/black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/etLName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tv_last_name"
                        android:inputType="textPersonName"
                        android:textColor="@color/black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/etDob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:drawableRight="@drawable/calendar"
                        android:drawableTint="#1468B1"
                        android:editable="false"
                        android:hint="@string/tv_select_dob"
                        android:inputType="text"
                        android:longClickable="false"
                        android:textColor="@color/black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_not_interested"
                        android:enabled="false"
                        android:hint="@string/tv_email"
                        android:inputType="textWebEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/etMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_not_interested"
                        android:enabled="false"
                        android:hint="@string/tv_mobile_number"
                        android:maxLength="10" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/etOrgName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tv_organization_name"
                        android:inputType="textPersonName"
                        android:textColor="@color/black" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="25dp"
                android:background="@drawable/btn_round_filled"
                android:padding="10dp"
                android:text="@string/tv_save_profile"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>